Thu May 27 18:01:28 BST 2004 (njh)
----------------------------------
  * docs/man/clamav-milter.8:	Clarify usage of when to use template files
  * libclamav/message.c:	Fixed bug where a truncated BinHex file could
	crash the scanner (bug found by Stefan Kaltenbrunner
		<mm-mailinglist@madness.at>)

Thu May 27 16:38:14 BST 2004 (trog)
-----------------------------------
  *  libclamav/vba_extract.c: Add code to extract OLE2 objects embedded
	inside PowerPoint Documents. That's where the VBA is stored
	(not yet activated).

Wed May 26 16:57:21 CEST 2004 (tk)
----------------------------------
  * libclamav: disable (accidentally enabled yesterday) PE code

Tue May 25 22:30:33 CEST 2004 (tk)
----------------------------------
  * libclamav: + report oversized archives (just like clamav-0.6x did)
	       + do not trigger off file type recognizer in raw mode
	         (fixes stdin scanning in clamscan - Debian Bug #250806)
  * clamd: harden read() in command parser
  * Makefiles: + fix *.cvd and *.conf installation in VPATHed directory
	         (patch by Eugene Crosser <crosser*rol.ru>)
	       + disable pthread code in shared files if needed
  * doc: include manual page for freshclam.conf (from Debian)

Tue May 25 17:24:48 BST 2004 (njh)
----------------------------------
  * clamav-milter:	X-Virus-Status: Not Scanned - StreamMaxLength exceeded
	was not always being added
			Now says host running clamd rather than host running
	clamav-milter, useful for checking load balancing etc.

Mon May 24 18:09:23 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Include hostname of the scanner (clamav-milter not
	clamd for now) in the headers if --noxheader is not given

Fri May 21 12:32:24 BST 2004 (njh)
----------------------------------
  * libclamav/blob.c:	Fixed logic error in blobClose()

Fri May 21 10:16:27 BST 2004 (njh)
----------------------------------
  * clamav-milter:	--from wasn't always recognised